# BodyDetection

./: .gitignore  BodyDetection.openapi.json  README.md  pyproject.toml
model/: dehaze.pth
src/: ImageDetector.py  MultiModalVideoDetector.py  cache.py  config.py  dehaze.py  image_detect.py  main.py  task_manager.py  video_detect.py
src/dehaze/: dehaze.py  model.py  net.py
src/static/: index.html
src/views/: dehaze_view.py  detect_view.py  realtime_view.py  task_view.py  upload_view.py  val_view.py
